--- a/docs/references/nextjs/route-protection-requiring-authorization.mdx
+++ b/docs/references/nextjs/route-protection-requiring-authorization.mdx
@@ -5,17 +5,14 @@ description: Learn how to protect the B2B (Business to Business) routes in your 
 
 # Required Authorization for Route protection 
 
-Clerk offers you, the developer, any options to secure the routes in their applications, as well as easy ways to integrate role or permissions based checks. The opt-in nature of Clerk gives you flexibility in how you want to build you application.
+Whether you're in the App Router, Pages Router, or Middleware, Clerk provides access to a standardized [Auth](/docs/references/nextjs/authentication-object) object that you can use to require authentication throughout your application. Below, we explain how to access and use the Auth object.
 
-This guide will cover:
-- protecting routes from users who are not signed in
-- integrating your route protection with organization roles and permissions
+If you want to learn about protecting routes based on [organization](/docs/organizations/overview) roles or permissions, see the [requiring authentication](/docs/references/nextjs/route-protection-requiring-authentication) guide.
 
 
-## Protect your routes using Organization roles or permissions
+## App Router
 
-
-### Protect a route using layout.tsx
+### Protect a layout or page
 
 You can use `protect()` and `has()` in a route's `layout.tsx` to protect based on roles or permissions.
 
@@ -49,7 +46,6 @@ export default async function Layout({ children }: { children: React.ReactNode }
 ```
 </CodeBlockTabs>
 
-### Page example
 
 You can use `protect()` and `has()` in a specific page to protect using roles and permissions from organizations.
 
@@ -86,12 +82,24 @@ if (!auth().has({ role: "org:admin" })) {
 ```
 </CodeBlockTabs>
 
+### Protect your Route Handlers and Server Actions
 
-### Middleware
+asdfs
+
+
+## Pages Router
+
+### Protect a page
+sadff
+
+### Protect your application with `_app.tsx`
+
+assda
+
+## Protect your application with Middleware
 
 You can manage your route protection with `clerkMiddleware()` along with `has()` and `protect()` to protect based on organization roles and permissions.
 
-<CodeBlockTabs type="router" options={["protect()", "has()"]}>
 ```tsx filename="middleware.tsx"
 import {
   clerkMiddleware,
@@ -115,33 +123,5 @@ export const config = {
   matcher: ['/((?!.*\\..*|_next).*)', '/', '/(api|trpc)(.*)'],
 };
 ```
-
-```tsx filename="app/dashboard/manage-users/page.tsx" 
-import {
-  clerkMiddleware,
-  createRouteMatcher,
-} from '@clerk/nextjs/server';
-
-const isProtectedRoute = createRouteMatcher([
-  '/dashboard'
-]);
-
-export default clerkMiddleware((auth, req) => {
-  // restrict protected routes to users with specific permissions 
-  if (isProtectedRoute(req)) {
-    console.log('test')
-    auth().protect(has => {
-      return (
-        has({ permission: 'org:test:permission' })
-      )
-    })
-  }
-}
-
-export const config = {
-  matcher: ['/((?!.*\\..*|_next).*)', '/', '/(api|trpc)(.*)'],
-};
-```
-</CodeBlockTabs>
 
 
