--- a/docs/references/react/add-react-router.mdx
+++ b/docs/references/react/add-react-router.mdx
@@ -161,7 +161,7 @@ The second layout will be non-rendering and will protect everything in the `/das
 <CodeBlockTabs options={["Root Layout", "Dashboard Layout"]}>
 
 ```tsx filename="src/layouts/root-layout.tsx"
-import { Link, Outlet } from 'react-router-dom'
+import { Link, Outlet, useNavigate } from 'react-router-dom'
 import { ClerkProvider, SignedIn, SignedOut, UserButton } from '@clerk/clerk-react'
 
 const PUBLISHABLE_KEY = import.meta.env.VITE_CLERK_PUBLISHABLE_KEY
@@ -172,6 +172,7 @@ if (!PUBLISHABLE_KEY) {
 
 export default function RootLayout() {
   const navigate = useNavigate();
+  
   return (
     <ClerkProvider navigate={navigate} publishableKey={PUBLISHABLE_KEY}>
       <header className="header">
