--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -22,7 +22,7 @@ However, if you require more precise customization or prefer having your applica
 
 ## How the Account Portal works
 
-The Account Portal utilizes Clerk's [prebuilt components](/docs/components/overview), which are embedded into dedicated pages hosted on Clerk servers.
+The Account Portal uses Clerk's [prebuilt components](/docs/components/overview), which are embedded into dedicated pages hosted on Clerk servers.
 
 <Images
   width={1200}
