--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -3,11 +3,11 @@ title: Account Portal Overview
 description: The Account Portal offers a comprehensive solution for managing user authentication and profile management in your web application and is the fastest way to add Clerk's authentication to your application with minimal code required.
 ---
 
-# Overview
+# Account portal overview
 
 The Account Portal in Clerk is a powerful feature that allows you to streamline the sign-in, sign-up, and profile management experience for your users, without having to build your own components or host your own pages.
 
-<Images 
+<Images
   width={992}
   height={296}
   src="/docs/images/account-portal/account_portal_splash.png"
@@ -16,22 +16,21 @@ The Account Portal in Clerk is a powerful feature that allows you to streamline 
 
 ## Why use the Account Portal?
 
-The Account Portal provides the pages necessary for your users to sign-up, sign-in, and manage their accounts, all while maintaining seamless integration with your application. These pages are hosted on Clerk servers for you and they require minimal setup to get started. If you’re looking for the fastest way to add authentication and user management to your application, then this is a great choice.
+The Account Portal provides the pages necessary for your users to sign-up, sign-in, and manage their accounts, all while maintaining seamless integration with your application. These pages are hosted on Clerk servers for you and they require minimal setup to get started. If you're looking for the fastest way to add authentication and user management to your application, then this is a great choice.
 
-However, if you require more precise customization or prefer having your application self-contained, then we would recommend using our fully customizable [prebuilt components](/docs/components/overview), or you can build your own [custom flows](/docs/custom-flows/overview) instead.
+However, if you require more precise customization or prefer having your application self-contained, then you can use Clerk's fully customizable [prebuilt components](/docs/components/overview), or you can [build your own custom user interface using Clerk's API](/docs/custom-flows/overview).
 
 ## How the Account Portal works
 
-The Account Portal utilizes our [prebuilt Clerk components](/docs/components/overview), which are embedded into dedicated pages hosted on Clerk servers. 
+The Account Portal uses Clerk's [prebuilt components](/docs/components/overview), which are embedded into dedicated pages hosted on Clerk servers.
 
-<Images 
+<Images
   width={1200}
   height={350}
   src="/docs/images/account-portal/account_portal_how_it_works.png"
   alt="Account Portal"
 />
 
-After a user has finished their flow in an Account Portal page, Clerk automatically redirects them back to your application along with the required authentication context. This way, users are automatically redirected to and from your application for a seamless experience. 
+After a user has finished their flow in an Account Portal page, Clerk automatically redirects them back to your application along with the required authentication context. This way, users are automatically redirected to and from your application for a seamless experience.
 
-
-For each application environment, Clerk provides pages for sign-up, sign-in, user profile, organization profile, and organization creation flow. To integrate the Account Portal with your application, check out our [setup guide](/docs/account-portal/getting-started).
+For each application environment, Clerk provides pages for sign-up, sign-in, user profile, organization profile, and organization creation flow. To integrate the Account Portal with your application, check out the [setup guide](/docs/account-portal/getting-started).
