remove reference links to each; add section for signin, signup, signintokens errors

--- a/docs/errors/overview.mdx
+++ b/docs/errors/overview.mdx
@@ -7,111 +7,143 @@ description: A breakdown of all Clerk's errors.
 
 ## [Actor tokens](/docs/errors/actor-tokens)
 
-* [`ActorTokenRevoked`](/docs/errors/actor-tokens#actor-token-revoked)
-* [`ActorTokenAlreadyUsed`](/docs/errors/actor-tokens#actor-token-already-used)
-* [`ActorTokenCannotBeUsed`](/docs/errors/actor-tokens#actor-token-cannot-be-used)
-* [`ActorTokenCanBeUsedOnlyInSignIn`](/docs/errors/actor-tokens#actor-token-can-be-used-only-in-sign-in)
-* [`ActorTokenSubjectNotFound`](/docs/errors/actor-tokens#actor-token-subject-not-found)
-* [`ActorTokenCannotBeRevoked`](/docs/errors/actor-tokens#actor-token-cannot-be-revoked)
+- `ActorTokenRevoked`
+- `ActorTokenAlreadyUsed`
+- `ActorTokenCannotBeUsed`
+- `ActorTokenCanBeUsedOnlyInSignIn`actor-tokens#actor-token-can-be-used-only-in-sign-in)
+- `ActorTokenSubjectNotFound`
+- `ActorTokenCannotBeRevoked`
 
 ## [Allowlist identifiers](/docs/errors/allowlist-identifiers)
 
-* [`AllowlistIdentifierNotFound`](/docs/errors/allowlist-identifiers#resource-not-found-code)
-* [`DuplicateAllowlistIdentifier`](/docs/errors/allowlist-identifiers#duplicate-allowlist-identifier)
+- `AllowlistIdentifierNotFound`
+- `DuplicateAllowlistIdentifier`
 
 ## [Application](/docs/errors/application)
 
-* [`ApplicationNotFound`](/docs/errors/application#application-not-found)
-* [`NotAuthorizedToDeleteSystemApplication`](/docs/errors/application#not-authorized-to-delete-system-application)
-* [`NotAuthorizedToMoveApplicationToOrganization`](/docs/errors/application#not-authorized-to-move-application-to-organization)
-* [`ApplicationAlreadyBelongsToOrganization`](/docs/errors/application#application-already-belongs-to-organization)
-* [`ApplicationAlreadyBelongsToUser`](/docs/errors/application#application-already-belongs-to-user)
-* [`InvalidPlanForResource`](/docs/errors/application#invalid-plan-for-resource)
-* [`CannotTransferPaidAppToAccountWithoutBillingInformation`](/docs/errors/application#cannot-transfer-paid-app-to-account-without-billing-information)
-* [`CannotTransferToAccountWithoutPaymentMethod`](/docs/errors/application#cannot-transfer-to-account-without-payment-method)
+- `ApplicationNotFound`
+- `NotAuthorizedToDeleteSystemApplication`
+- `NotAuthorizedToMoveApplicationToOrganization`
+- ApplicationAlreadyBelongsToOrganization`
+- `ApplicationAlreadyBelongsToUser`
+- `InvalidPlanForResource`
+- `CannotTransferPaidAppToAccountWithoutBillingInformation`
+- `CannotTransferToAccountWithoutPaymentMethod`
 
 ## [Authentication](/docs/errors/authentication)
 
-* [`InvalidClerkSecretKey`](/docs/errors/authentication#invalid-clerk-secret-key)
-* [`InvalidAuthentication`](/docs/errors/authentication#invalid-authentication)
-* [`InvalidAuthorizationHeaderFormat`](/docs/errors/authentication#invalid-authorization-header-format)
-* [`InvalidAuthorization`](/docs/errors/authentication#invalid-authorization)
-* [`InvalidCSRFToken`](/docs/errors/authentication#invalid-csrf-token)
-* [`MissingRequestHeaders`](/docs/errors/authentication#missing-request-headers)
-* [`InvalidOriginHeader`](/docs/errors/authentication#invalid-origin-header)
-* [`DevBrowserUnauthenticated`](/docs/errors/authentication#dev-browser-unauthenticated)
-* [`URLBasedSessionSyncingDisabled`](/docs/errors/authentication#url-based-session-syncing-disabled)
-* [`InvalidRequestForEnvironment`](/docs/errors/authentication#invalid-request-for-environment)
-* [`RequestInvalidForInstance`](/docs/errors/authentication#request-invalid-for-instance)
-* [`InvalidHost`](/docs/errors/authentication#invalid-host)
-* [`IdentificationExists`](/docs/errors/authentication#identification-exists)
-* [`IdentifierNotAllowedAccess`](/docs/errors/authentication#identifier-not-allowed-access)
-* [`SignedOut`](/docs/errors/authentication#signed-out)
-* [`InvalidUserSettings`](/docs/errors/authentication#invalid-user-settings)
-* [`InvalidHandshake`](/docs/errors/authentication#invalid-handshake)
+- `InvalidClerkSecretKey`
+- `InvalidAuthentication`
+- `InvalidAuthorizationHeaderFormat`authentication#invalid-authorization-header-format)
+- `InvalidAuthorization`
+- `InvalidCSRFToken`
+- `MissingRequestHeaders`
+- `InvalidOriginHeader`
+- `DevBrowserUnauthenticated`
+- `URLBasedSessionSyncingDisabled`authentication#url-based-session-syncing-disabled)
+- `InvalidRequestForEnvironment`authentication#invalid-request-for-environment)
+- `RequestInvalidForInstance`
+- `InvalidHost`
+- `IdentificationExists`
+- `IdentifierNotAllowedAccess`authentication#identifier-not-allowed-access)
+- `SignedOut`
+- `InvalidUserSettings`
+- `InvalidHandshake`
 
 ## [Backup codes](/docs/errors/backup-codes)
 
-* [`BackupCodesNotAvailable`](/docs/errors/backup-codes#backup-codes-not-available)
+- `BackupCodesNotAvailable`
 
 ## [Billing](/docs/errors/billing)
 
-* [`CheckoutLocked`](/docs/errors/billing#checkout-locked)
-* [`CheckoutSessionMismatch`](/docs/errors/billing#checkout-session-mismatch)
-* [`UnsupportedSubscriptionPlanFeatures`](/docs/errors/billing#unsupported-subscription-plan-features)
-* [`InvalidSubscriptionPlanSwitch`](/docs/errors/billing#invalid-subscription-plan-switch)
+- `CheckoutLocked`
+- `CheckoutSessionMismatch`
+- `UnsupportedSubscriptionPlanFeatures`
+- `InvalidSubscriptionPlanSwitch`
 
 ## [Billing accounts](/docs/errors/billing-accounts)
 
-* [`BillingAccountNotFound`](/docs/errors/billing-accounts#billing-account-not-found)
-* [`BillingAccountNotAccessible`](/docs/errors/billing-accounts#billing-account-not-accessible)
-* [`BillingAccountWithoutCustomerID`](/docs/errors/billing-accounts#billing-account-without-customer-id)
+- `BillingAccountNotFound`
+- `BillingAccountNotAccessible`
+- `BillingAccountWithoutCustomerID`
 
 ## [Blocklist identifiers](/docs/errors/blocklist-identifiers)
 
-* [`DuplicateBlocklistIdentifier`](/docs/errors/blocklist-identifiers#duplicate-blocklist-identifier)
-* [`BlocklistIdentifierNotFound`](/docs/errors/blocklist-identifiers#blocklist-identifier-not-found)
+- `DuplicateBlocklistIdentifier`
+- `BlocklistIdentifierNotFound`
 
 ## [Clients](/docs/errors/clients)
 
-* [`ClientNotFound`](/docs/errors/clients#client-not-found)
-* [`ClientNotFoundInRequest`](/docs/errors/clients#client-not-found-in-request)
+- `ClientNotFound`
+- `ClientNotFoundInRequest`
 
 ## [Cookie](/docs/errors/cookie)
 
-* [`MissingClaims`](/docs/errors/cookie#missing-claims)
-* [`InvalidCookie`](/docs/errors/cookie#invalid-cookie)
-* [`InvalidRotatingToken`](/docs/errors/cookie#linvalid-rotating-token)
+- `MissingClaims`
+- `InvalidCookie`
+- `InvalidRotatingToken`
 
 ## [Deprecation](/docs/errors/deprecation)
 
-* [`BAPIEndpointDeprecated`](/docs/errors/deprecation#bapi-endpoint-deprecated)
+- `BAPIEndpointDeprecated`
 
 ## [Domains](/docs/errors/domains)
 
-* [`DomainNotFound`](/docs/errors/domains#domain-not-found)
-* [`DomainUpdateForbidden`](/docs/errors/domains#domain-update-forbidden)
-* [`OperationNotAllowedOnSatelliteDomain`](/docs/errors/domains#operation-not-allowed-on-satellite-domain)
-* [`OperationNotAllowedOnPrimaryDomain`](/docs/errors/domains#operation-not-allowed-on-primary-domain)
-* [`SyncNonceAlreadyConsumed`](/docs/errors/domains#sync-nonce-already-consumed)
-* [`PrimaryDomainAlreadyExists`](/docs/errors/domains#primary-domain-already-exists)
-* [`InvalidProxyConfiguration`](/docs/errors/domains#invalid-proxy-configuration)
+- `DomainNotFound`
+- `DomainUpdateForbidden`
+- `OperationNotAllowedOnSatelliteDomain`
+- `OperationNotAllowedOnPrimaryDomain`
+- `SyncNonceAlreadyConsumed`
+- `PrimaryDomainAlreadyExists`
+- `InvalidProxyConfiguration`
 
 ## [Entitlements](/docs/errors/entitlements)
 
-* [`FormInvalidEntitlementKey`](/docs/errors/entitlements#form-invalid-entitlement-key)
-* [`EntitlementAlreadyAssociatedWithProduct`](/docs/errors/entitlements#entitlement-already-associated-with-product)
+- `FormInvalidEntitlementKey`
+- `EntitlementAlreadyAssociatedWithProduct`
 
 ## [Features](/docs/errors/features)
 
-* [`FeatureNotEnabled`](/docs/errors/features#feature-not-enabled)
-* [`NotImplemented`](/docs/errors/features#not-implemented)
-* [`FeatureRequiresPSU`](/docs/errors/features#feature-requires-psu)
+- `FeatureNotEnabled`
+- `NotImplemented`
+- `FeatureRequiresPSU`
 
 ## [Identifications](/docs/errors/identifications)
 
-* [`IdentificationNotFound`](/docs/errors/identifications#identification-not-found)
-* [`LastIdentificationDeletionFailed`](/docs/errors/identifications#last-identification-deletion-failed)
-* [`LastRequiredIdentificationDeletionFailed`](/docs/errors/identifications#last-required-identification-deletion-failed)
-* [`LastIdentificationSetFor2FAFailed`](/docs/errors/identifications#last-identification-set-for2-fa-failed)
-* [`LastIdentificaUpdateSecondFactorUnverifiedtionSetFor2FAFailed`](/docs/errors/identifications#update-second-factor-unverified)
+- `IdentificationNotFound`
+- `LastIdentificationDeletionFailed`
+- `LastRequiredIdentificationDeletionFailed`
+- `LastIdentificationSetFor2FAFailed`
+- `LastIdentificaUpdateSecondFactorUnverifiedtionSetFor2FAFailed`
+
+## [Sign-in](/docs/errors/sign-in)
+
+- `SingleModeSessionExists`
+- `AlreadySignedIn`
+- `AccountTransferInvalid`
+- `InvalidClientStateForAction`
+- `InvalidStrategyForUser`
+- `IdentificationClaimed`
+- `MutationOnOlderSignInNotAllowed`
+- `SignInNotFound`
+- `IdentificationBelongsToDifferentUser`
+- `NoSecondFactorsForStrategy`
+- `SignInNoIdentificationForUser`
+- `SignInIdentificationOrUserDeleted`
+
+## [Sign-up](/docs/errors/sign-up)
+
+- `SignUpNotFound`
+- `SignUpForbiddenAccess`
+- `SignUpCannotBeUpdated`
+- `CaptchaNotEnabled`
+- `CaptchaInvalid`
+- `SignUpOutdatedVerification`
+
+## [Sign-in-tokens](/docs/errors/sign-in-tokens)
+
+- `SignInTokenRevoked`
+- `SignInTokenAlreadyUsed`
+- `SignInTokenCannotBeUsed`
+- `SignInTokenCanBeUsedOnlyInSignIn`
+- `SignInTokenCannotBeRevoked`
