--- a/docs/errors/overview.mdx
+++ b/docs/errors/overview.mdx
@@ -10,7 +10,7 @@ description: A breakdown of all Clerk's errors.
 - `ActorTokenRevoked`
 - `ActorTokenAlreadyUsed`
 - `ActorTokenCannotBeUsed`
-- `ActorTokenCanBeUsedOnlyInSignIn`actor-tokens#actor-token-can-be-used-only-in-sign-in)
+- `ActorTokenCanBeUsedOnlyInSignIn`
 - `ActorTokenSubjectNotFound`
 - `ActorTokenCannotBeRevoked`
 
@@ -34,18 +34,18 @@ description: A breakdown of all Clerk's errors.
 
 - `InvalidClerkSecretKey`
 - `InvalidAuthentication`
-- `InvalidAuthorizationHeaderFormat`authentication#invalid-authorization-header-format)
+- `InvalidAuthorizationHeaderFormat`
 - `InvalidAuthorization`
 - `InvalidCSRFToken`
 - `MissingRequestHeaders`
 - `InvalidOriginHeader`
 - `DevBrowserUnauthenticated`
-- `URLBasedSessionSyncingDisabled`authentication#url-based-session-syncing-disabled)
-- `InvalidRequestForEnvironment`authentication#invalid-request-for-environment)
+- `URLBasedSessionSyncingDisabled`
+- `InvalidRequestForEnvironment`
 - `RequestInvalidForInstance`
 - `InvalidHost`
 - `IdentificationExists`
-- `IdentifierNotAllowedAccess`authentication#identifier-not-allowed-access)
+- `IdentifierNotAllowedAccess`
 - `SignedOut`
 - `InvalidUserSettings`
 - `InvalidHandshake`
