backend sdk core2 updates (#644)

--- a/docs/references/backend/client/get-client-list.mdx
+++ b/docs/references/backend/client/get-client-list.mdx
@@ -1,9 +1,13 @@
 ---
-title: getClientList()
+title: getClientList() (deprecated)
 description: Retrieves the list of clients.
 ---
 
-# `getClientList()`
+<Callout type="danger">
+  This method is now deprecated.
+</Callout>
+
+# `getClientList()` (deprecated)
 
 Retrieves the list of clients.
 
