fix clerkmiddleware code

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -55,7 +55,7 @@ pnpm add @clerk/nextjs
   - Navigate to your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys).
   - Select your application, then select **🔑 API Keys** in the sidebar menu.
   - You can copy your keys from the **Quick Copy** section.
-3. Add your keys to your `.env.local` file. 
+3. Add your keys to your `.env.local` file.
 
 The final result should look as follows:
 
@@ -84,7 +84,7 @@ Select your preferred router below to learn how to make this data available acro
   }: {
     children: React.ReactNode
   }) {
-    return (        
+    return (
       <ClerkProvider>
         <html lang="en">
           <body>{children}</body>
@@ -99,7 +99,7 @@ Select your preferred router below to learn how to make this data available acro
     import { ClerkProvider } from "@clerk/nextjs/server";
     import type { AppProps } from "next/app";
     function MyApp({ Component, pageProps }: AppProps) {
-      return (          
+      return (
         <ClerkProvider {...pageProps}>
           <Component {...pageProps} />
         </ClerkProvider>
@@ -115,36 +115,21 @@ Select your preferred router below to learn how to make this data available acro
 Now that Clerk is installed and mounted in your application, you can decide which pages are public and which should require authentication to access:
 
 1. Create a `middleware.ts` file at the root of your project, or in your `src/` directory if you have one.
-2. In your `middleware.ts`, export Clerk's [`clerkMiddleware`](/docs/references/nextjs/clerk-middleware) helper:
+2. In your middleware.ts, export Clerk's `clerkMiddleware()` helper:
   ```tsx filename="middleware.ts"
   import { clerkMiddleware } from "@clerk/nextjs/server";
 
-  export default clerkMiddleware({});
-  ```
-3. With `clerkMiddleware()`, authentication will be enabled by default on all routes that your Next.js middleware runs on, blocking access to all signed out visitors. You can specify valid routes using Next.js's [`matcher`](https://nextjs.org/docs/app/building-your-application/routing/middleware#matcher). Add the following code to your `middleware.ts` to protect your entire application:
-
-  ```tsx filename="middleware.ts" {15}
-  import { clerkMiddleware } from "@clerk/nextjs/server";
-
-  export default clerkMiddleware({
-    // Routes that can be accessed while signed out
-    publicRoutes: ['/anyone-can-visit-this-route'],
-    // Routes that can always be accessed, and have
-    // no authentication information
-    ignoredRoutes: ['/no-auth-in-this-route'],
-  });
+  export default clerkMiddleware();
 
   export const config = {
-    // Protects all routes, including api/trpc.
-    // See https://clerk.com/docs/references/nextjs/clerk-middleware
-    // for more information about configuring your Middleware
-    matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
+    matcher: [
+      '/((?!.*\\..*|_next).*)', // Don't run middleware on static files
+      '/', // Run middleware on index page
+      '/(api|trpc)(.*)'
+    ], // Run middleware on API routes
   };
   ```
-
-<Callout type="info">
-  See the [`authMiddleware()`](/docs/references/nextjs/auth-middleware#default-behaviour) docs to learn more about `publicRoutes` and `ignoredRoutes`.
-</Callout>
+3. By default, `clerkMiddleware()` will not protect any routes. All routes are public and you must opt-in to protection for routes. See the [`clerkMiddleware()` docs](https://github.com/docs/references/nextjs/clerk-middleware) to learn how to require authentication for specific routes.
 
 ### Try accessing your app
 
@@ -210,7 +195,7 @@ export default function Home() {
     </header>
   );
 }
-``` 
+```
 </CodeBlockTabs>
 
 Then, visit your app's homepage at [`localhost:3000`](http://localhost:3000) while signed out or signed in to see `<SignInButton />` or `<UserButton />` in action.
