edits with jeff and roy

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -35,15 +35,15 @@ To get started using Clerk with Next.js, add the SDK to your project:
 
 <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
-  npm install @clerk/nextjs
+  npm install @clerk/nextjs@beta
   ```
 
 ```bash filename="terminal"
-yarn add @clerk/nextjs
+yarn add @clerk/nextjs@beta
 ```
 
 ```bash filename="terminal"
-pnpm add @clerk/nextjs
+pnpm add @clerk/nextjs@beta
 ```
 
 </CodeBlockTabs>
@@ -51,7 +51,7 @@ pnpm add @clerk/nextjs
 ### Set your environment keys
 
 1. If you don't have a `.env.local` file in the root directory of your Next.js project, create one now.
-2. Find your secret key and publishable key. If you're signed into Clerk, the `.env.local` snippet below will contain your both. Otherwise:
+2. Find your publishable key and secret key. If you're signed into Clerk, the `.env.local` snippet below will contain your keys. Otherwise:
   - Navigate to your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys).
   - Select your application, then select **🔑 API Keys** in the sidebar menu.
   - You can copy your keys from the **Quick Copy** section.
@@ -74,8 +74,13 @@ All Clerk hooks and components must be children of the [`<ClerkProvider>`](/docs
 
 Select your preferred router below to learn how to make this data available across your entire app:
 
-<CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-  ```tsx filename="/src/app/layout.tsx" {1,10-14}
+<Tabs type="router" options={["App Router", "Pages Router"]}>
+  <Tab>
+  <Callout type="info">
+    If you are not using `src`, the `app/layout.tsx` file will be in your root folder.
+  </Callout>
+
+  ```tsx filename="src/app/layout.tsx" {1,10-14}
   import { ClerkProvider } from '@clerk/nextjs'
   import './globals.css'
 
@@ -93,8 +98,14 @@ Select your preferred router below to learn how to make this data available acro
     )
   }
   ```
+  </Tab>
 
-  ```tsx filename="_app.tsx" {2,6-8}
+  <Tab>
+  <Callout type="info">
+    If you are not using `src`, the `_app.tsx` file will be in your root folder.
+  </Callout>
+
+  ```tsx filename="/src/pages/_app.tsx" {2,6-8}
     import '@/styles/globals.css'
     import { ClerkProvider } from "@clerk/nextjs/server";
     import type { AppProps } from "next/app";
@@ -106,53 +117,26 @@ Select your preferred router below to learn how to make this data available acro
       );
     }
     export default MyApp;
-    ```
+  ```
+  </Tab>
+</Tabs>
 
-</CodeBlockTabs>
+### Add Middleware to your application
 
-### Add authentication to your app with middleware
-
-Now that Clerk is installed and mounted in your application, you can decide which pages are public and which should require authentication to access:
+Middleware grants you access to user authentication state throughout your application, on any route or page. With `clerkMiddleware()` offers the capability to protect routes, it does not enforce protection by default. Please see the [`clerkMiddleware()` reference](/docs/references/nextjs/clerk-middleware) and the [Route Protection guide](/docs/references/nextjs/route-protection) for information on protecting routes.
 
 1. Create a `middleware.ts` file at the root of your project, or in your `src/` directory if you have one.
 2. In your middleware.ts, export Clerk's `clerkMiddleware()` helper:
-  ```tsx filename="middleware.ts"
+  ```tsx filename="/src/middleware.ts"
   import { clerkMiddleware } from "@clerk/nextjs/server";
 
   export default clerkMiddleware();
 
   export const config = {
-    matcher: [
-      '/((?!.*\\..*|_next).*)', // Don't run middleware on static files
-      '/', // Run middleware on index page
-      '/(api|trpc)(.*)'
-    ], // Run middleware on API routes
+    matcher: ['/((?!.*\\..*|_next).*)', '/', '/(api|trpc)(.*)'],
   };
   ```
 3. By default, `clerkMiddleware()` will not protect any routes. All routes are public and you must opt-in to protection for routes. See the [`clerkMiddleware()` docs](https://github.com/docs/references/nextjs/clerk-middleware) to learn how to require authentication for specific routes.
-
-### Try accessing your app
-
-Access your app to verify that authentication is enabled:
-
-1. Run your project with the following terminal command from the root directory of your project:
-  <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
-    ```bash filename="terminal"
-    npm run dev
-    ```
-
-    ```bash filename="terminal"
-    yarn dev
-    ```
-
-    ```bash filename="terminal"
-    pnpm dev
-    ```
-
-  </CodeBlockTabs>
-2. Visit [`http://localhost:3000`](http://localhost:3000) to access your app. The Middleware will redirect you to your Sign Up page, provided by Clerk's [Account Portal](/docs/account-portal/overview) feature.
-3. Sign up to gain access to your application.
-4. Log into your new account. You should be able to access it now.
 
 ### Create a header with Clerk components
 
@@ -183,7 +167,7 @@ export default function Home() {
 ```tsx filename="pages/index.tsx" {1,6-11}
 import { SignedIn, SignedOut, SignInButton, UserButton } from "@clerk/nextjs";
 
-export default function Home() {
+export default function Page() {
   return (
     <header>
       <SignedOut>
