reorganize next steps and more resources sections

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -74,7 +74,7 @@ All Clerk hooks and components must be children of the [`<ClerkProvider>`](/docs
 
 Select your preferred router below to learn how to make this data available across your entire app:
 
-<Tabs type="router" options={["App Router", "Pages Router"]}>
+<Tabs type="router" items={["App Router", "Pages Router"]}>
   <Tab>
   <Callout type="info">
     If you are not using `src`, the `app/layout.tsx` file will be in your root folder.
@@ -188,19 +188,19 @@ Then, visit your app's homepage at [`localhost:3000`](http://localhost:3000) whi
 
 ## Next steps
 
-To see an example application that demonstrates user authentication, and session and organization management, explore one of Clerk's Next.js demo repos:
+- Learn how to use Clerk's hooks and helpers to access the active user and session data.
+<br/>[Read the guide &raquo;](/docs/references/nextjs/read-session-data)
 
-- [Clerk + Next.js App Router Demo](https://github.com/clerk/clerk-nextjs-demo-app-router)
-- [Clerk + Next.js Pages Router Demo](https://github.com/clerk/clerk-nextjs-demo-pages-router)
+- Learn how to add your own sign-up and sign-in pages with Clerk components
+<br/>[Read the guide &raquo;](/docs/references/nextjs/custom-signup-signin-pages)
 
 ## More resources
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+<Cards title="Clerk + Next.js App Router Demo" description="See an example application that demonstrates user authentication, and session and organization management." link="/docs/references/nextjs/custom-signup-signin-pages" cta="Learn More" />
 
-    <Cards title="Create custom sign-up and sign-in pages" description="Learn how add custom sign-up and sign-in pages with Clerk components." link="/docs/references/nextjs/custom-signup-signin-pages" cta="Learn More" />
-
-    <Cards title="Read user and session data" description="Learn how to use Clerk's hooks and helpers to access the active session and user data in your Next.js application." link="/docs/references/nextjs/read-session-data" cta="Learn More" />
+<Cards title="Clerk + Next.js Pages Router Demo" description="See an example application that demonstrates user authentication, and session and organization management." link="/docs/references/nextjs/custom-signup-signin-pages" cta="Learn More" />
 
     <Cards title="Client Side Helpers" description="Learn more about Next.js client side helpers and how to use them." link="/docs/references/nextjs/overview#client-side-helpers" cta="Learn More" />
 
