remove theme usage; fix mountSignUp

--- a/docs/references/javascript/clerk/sign-up.mdx
+++ b/docs/references/javascript/clerk/sign-up.mdx
@@ -34,11 +34,7 @@ Render the [`<SignUp />`][signup-ref] component to an HTML `<div>` element.
   const clerk = new Clerk('pk_[publishable_key]');
   await clerk.load();
 
-  clerk.mountSignUp(signUpComponent, {
-    appearance: {
-      baseTheme: dark
-    }
-  });
+  clerk.mountSignUp(signUpComponent, {});
   ```
 
   ```html {13-17}
@@ -54,11 +50,7 @@ Render the [`<SignUp />`][signup-ref] component to an HTML `<div>` element.
 
       const signUpComponent = document.querySelector('#sign-up');
 
-      window.Clerk.openSignUp(signUpComponent, {
-        appearance: {
-          baseTheme: dark
-        }
-      });
+      window.Clerk.mountSignUp(signUpComponent, {});
     });
     document.body.appendChild(script);
   </script>
