--- a/docs/references/javascript/clerk/sign-in.mdx
+++ b/docs/references/javascript/clerk/sign-in.mdx
@@ -56,11 +56,7 @@ In the example below, the `<SignIn />` component is rendered to a `<div>` elemen
   const clerk = new Clerk(`{{pub_key}}`);
   await clerk.load();
 
-  clerk.mountSignIn(signInComponent, {
-    appearance: {
-      baseTheme: 'dark'
-    }
-  });
+  clerk.mountSignIn(signInComponent, {});
   ```
 
   ```html
@@ -79,11 +75,7 @@ In the example below, the `<SignIn />` component is rendered to a `<div>` elemen
 
       const signInComponent = document.querySelector('#sign-in');
 
-      window.Clerk.mountSignIn(signInComponent, {
-        appearance: {
-          baseTheme: dark
-        }
-      });
+      window.Clerk.mountSignIn(signInComponent, {});
     });
     document.body.appendChild(script);
   </script>
